--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <h3 class="section__title">Qué puedes hacer con Sendia</h3><span class="fa fa-arrow-right"></span>
             </div>
             <div class="cols cols-scroll">
-              <div class="col-xl-2">
+              <div class="col-xl-2 dscroll">
                 <article class="article--feature">
                   <div class="article__icon"><img src="img/icons/1.png"></div>
                   <div class="article__body">
@@ -100,7 +100,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-xl-2">
+              <div class="col-xl-2 dscroll">
                 <article class="article--feature">
                   <div class="article__icon"><img src="img/icons/2.png"></div>
                   <div class="article__body">
@@ -109,7 +109,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-xl-2">
+              <div class="col-xl-2 dscroll">
                 <article class="article--feature">
                   <div class="article__icon"><img src="img/icons/3.png"></div>
                   <div class="article__body">
@@ -118,7 +118,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-xl-2">
+              <div class="col-xl-2 dscroll">
                 <article class="article--feature">
                   <div class="article__icon"><img src="img/icons/1.png"></div>
                   <div class="article__body">
@@ -127,7 +127,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-xl-2">
+              <div class="col-xl-2 dscroll">
                 <article class="article--feature">
                   <div class="article__icon"><img src="img/icons/2.png"></div>
                   <div class="article__body">
@@ -136,7 +136,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-xl-2">
+              <div class="col-xl-2 dscroll">
                 <article class="article--feature">
                   <div class="article__icon"><img src="img/icons/3.png"></div>
                   <div class="article__body">
@@ -156,7 +156,7 @@
           </div>
           <div class="section__body">
             <div class="cols">
-              <div class="col-md-6">
+              <div class="col-md-6 dscroll">
                 <article class="article--box">
                   <div class="article__bg">
                     <div class="bg"><img src="img/uploads/2.jpg"></div>
@@ -166,7 +166,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 dscroll">
                 <article class="article--box">
                   <div class="article__bg">
                     <div class="bg"><img src="img/uploads/3.jpg"></div>
@@ -176,7 +176,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 dscroll">
                 <article class="article--box">
                   <div class="article__bg">
                     <div class="bg"><img src="img/uploads/4.jpg"></div>
@@ -186,7 +186,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 dscroll">
                 <article class="article--box">
                   <div class="article__bg">
                     <div class="bg"><img src="img/uploads/5.jpg"></div>
@@ -207,7 +207,7 @@
           </div>
           <div class="section__body">
             <div class="cols">
-              <div class="col-md-6 col-lg-3">
+              <div class="col-md-6 col-lg-3 dscroll">
                 <article class="article--channel article--channer--sms">
                   <div class="article__body">
                     <div class="article__dark"></div>
@@ -222,7 +222,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-6 col-lg-3">
+              <div class="col-md-6 col-lg-3 dscroll">
                 <article class="article--channel article--channer--mail">
                   <div class="article__body">
                     <div class="article__dark"></div>
@@ -237,7 +237,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-6 col-lg-3">
+              <div class="col-md-6 col-lg-3 dscroll">
                 <article class="article--channel article--channer--wp">
                   <div class="article__body">
                     <div class="article__dark"></div>
@@ -252,7 +252,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-6 col-lg-3">
+              <div class="col-md-6 col-lg-3 dscroll">
                 <article class="article--channel article--channer--push">
                   <div class="article__body">
                     <div class="article__dark"></div>
@@ -279,7 +279,7 @@
           <div class="section__body">
             <p class="section__description">Nos adaptamos a las necesidades de todas las empresas.</p>
             <div class="cols">
-              <div class="col-md-4">
+              <div class="col-md-4 dscroll">
                 <article class="article--plan">
                   <div class="article__body">
                     <h5 class="article__title">Periodo de prueba</h5>
@@ -287,7 +287,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 dscroll">
                 <article class="article--plan article--plan--outstanding">
                   <div class="article__body"><span class="article__tag">Recomendado</span>
                     <h5 class="article__title">Modelo prepago</h5>
@@ -295,7 +295,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 dscroll">
                 <article class="article--plan">
                   <div class="article__body">
                     <h5 class="article__title">Plan personalizado</h5>
@@ -326,6 +326,41 @@
           </div>
         </div>
       </section>
+      <section class="section--arrow">
+        <div class="section__arrow">
+          <div data-goto=".section--main" class="section__arrow__circle"><span class="fa fa-arrow-up"></span></div>
+        </div>
+      </section>
+      <div class="menusticky">
+        <div class="menusticky__limit">
+          <div class="cols cols-gutter-0">
+            <div class="col-xs-3">
+              <div class="menusticky__item current">
+                <div class="menusticky__icon"><svg id="Layer_1" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><g><path d="m426 495.983h-340c-25.364 0-46-20.635-46-46v-242.02c0-8.836 7.163-16 16-16s16 7.164 16 16v242.02c0 7.72 6.28 14 14 14h340c7.72 0 14-6.28 14-14v-242.02c0-8.836 7.163-16 16-16s16 7.164 16 16v242.02c0 25.364-20.635 46-46 46z"/><path d="m496 263.958c-4.095 0-8.189-1.562-11.313-4.687l-198.989-198.987c-16.375-16.376-43.02-16.376-59.396 0l-198.988 198.988c-6.248 6.249-16.379 6.249-22.627 0-6.249-6.248-6.249-16.379 0-22.627l198.988-198.989c28.852-28.852 75.799-28.852 104.65 0l198.988 198.988c6.249 6.249 6.249 16.379 0 22.627-3.123 3.125-7.218 4.687-11.313 4.687z"/><path d="m320 495.983h-128c-8.837 0-16-7.164-16-16v-142c0-27.57 22.43-50 50-50h60c27.57 0 50 22.43 50 50v142c0 8.836-7.163 16-16 16zm-112-32h96v-126c0-9.925-8.075-18-18-18h-60c-9.925 0-18 8.075-18 18z"/></g></svg>
+                </div><a href="index.html">Home</a>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="menusticky__item">
+                <div class="menusticky__icon"><svg id="Layer_1" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><g><path d="m456 80h-400c-30.878 0-56 25.122-56 56v240c0 30.878 25.122 56 56 56h400c30.878 0 56-25.122 56-56v-240c0-30.878-25.122-56-56-56zm-400 32h400c13.233 0 24 10.767 24 24v32h-448v-32c0-13.233 10.767-24 24-24zm400 288h-400c-13.233 0-24-10.767-24-24v-176h448v176c0 13.233-10.767 24-24 24z"/><path d="m112 352h-16c-8.836 0-16-7.164-16-16v-16c0-8.836 7.164-16 16-16h16c8.836 0 16 7.164 16 16v16c0 8.836-7.164 16-16 16z"/></g></svg>
+                </div><a href="plans.html">Planes</a>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="menusticky__item">
+                <div class="menusticky__icon"><svg id="Capa_1" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><g><path d="m512 280c0-41.662-29.55-75.871-66.858-78.776-4.425-14.913-16.381-26.614-31.446-30.673-10.046-82.583-77.106-145.551-157.696-145.551s-147.65 62.968-157.695 145.551c-15.065 4.059-27.022 15.759-31.446 30.673-1.296.101-2.582.24-3.858.416v-97.64c0-8.284-6.716-15-15-15s-15 6.716-15 15v109.646c-19.837 14.084-33.001 38.556-33.001 66.354 0 41.662 29.55 75.871 66.858 78.776 4.411 14.866 16.305 26.537 31.303 30.632 6.39 37.194 38.85 65.592 77.839 65.592h3.469c6.276 18.58 23.86 32 44.531 32h64c25.916 0 47-21.084 47-47s-21.084-47-47-47h-64c-20.671 0-38.255 13.42-44.531 32h-3.469c-22.683 0-41.81-15.496-47.366-36.456 17.648-6.088 30.366-22.854 30.366-42.544v-132c0-19.759-12.806-36.572-30.55-42.606 9.37-66.256 63.146-116.394 127.55-116.394s118.18 50.138 127.55 116.394c-17.744 6.034-30.55 22.847-30.55 42.606v132c0 24.813 20.187 45 45 45h4c20.375 0 37.621-13.616 43.142-32.224 37.308-2.905 66.858-37.114 66.858-78.776zm-288 143h64c9.374 0 17 7.626 17 17s-7.626 17-17 17h-64c-9.374 0-17-7.626-17-17s7.626-17 17-17zm-194-143c0-23.787 15.425-44.268 35-48.287v96.573c-19.575-4.018-35-24.499-35-48.286zm99 66c0 8.271-6.729 15-15 15h-4c-8.271 0-15-6.729-15-15 0-48.134 0-87.504 0-132 0-8.271 6.729-15 15-15h4c8.271 0 15 6.729 15 15zm288 0c0 8.271-6.729 15-15 15h-4c-8.271 0-15-6.729-15-15v-132c0-8.271 6.729-15 15-15h4c8.271 0 15 6.729 15 15zm30-17.713v-96.573c19.575 4.019 35 24.5 35 48.287s-15.425 44.267-35 48.286z"/></g></svg>
+                </div><a href="support.html">Soporte</a>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="menusticky__item">
+                <div class="menusticky__icon"><svg id="Capa_1" enable-background="new 0 0 479.058 479.058" height="512" viewBox="0 0 479.058 479.058" width="512" xmlns="http://www.w3.org/2000/svg"><path d="m434.146 59.882h-389.234c-24.766 0-44.912 20.146-44.912 44.912v269.47c0 24.766 20.146 44.912 44.912 44.912h389.234c24.766 0 44.912-20.146 44.912-44.912v-269.47c0-24.766-20.146-44.912-44.912-44.912zm0 29.941c2.034 0 3.969.422 5.738 1.159l-200.355 173.649-200.356-173.649c1.769-.736 3.704-1.159 5.738-1.159zm0 299.411h-389.234c-8.26 0-14.971-6.71-14.971-14.971v-251.648l199.778 173.141c2.822 2.441 6.316 3.655 9.81 3.655s6.988-1.213 9.81-3.655l199.778-173.141v251.649c-.001 8.26-6.711 14.97-14.971 14.97z"/></svg>
+                </div><a href="contact.html">Contacto</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <footer>
       <div class="footer__wrap">
@@ -342,7 +377,7 @@
             </div>
           </div>
           <div class="col-sm-12">
-            <div class="footer__copyright"><span>2020 Sendia</span></div>
+            <div class="footer__copyright"><span>© 2020 Sendia</span></div>
           </div>
         </div>
       </div>
