--- a/index.html
+++ b/index.html
@@ -322,6 +322,14 @@
               <div class="section__client"><a href="#"><img src="img/icons/claro.svg"></a></div>
               <div class="section__client"><a href="#"><img src="img/icons/directv.svg"></a></div>
               <div class="section__client"><a href="#"><img src="img/icons/seguros-falabella.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/banco-bice.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/abcdin.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/entel.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/hertz.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/cencosud.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/claro.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/directv.svg"></a></div>
+              <div class="section__client"><a href="#"><img src="img/icons/seguros-falabella.svg"></a></div>
             </div>
           </div>
         </div>
