--- a/support.html
+++ b/support.html
@@ -84,7 +84,7 @@
       <section class="section--content">
         <div class="section__wrap section__wrap--xs section--lg">
           <div class="cols">
-            <div class="col-md-7">
+            <div class="col-lg-7">
               <div class="section__body wp dscroll">
                 <h4>¿Cómo atendemos a nuestros clientes?</h4>
                 <p>Con el objetivo de que nuestros clientes tengan trazabilidad de sus requerimientos, contamos con dos canales para realizar las solicitudes: Mail y Zendesk.</p>
@@ -129,7 +129,7 @@
                 </table>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-lg-5">
               <div class="section__img dscroll"><img src="img/uploads/6.png"></div>
               <div class="section__alert dscroll">
                 <p class="section__alert__title">Recuerda<span class="fa fa-exclamation-triangle"></span></p>
